webhook/validation/httproute/testdata/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: combined
  namespace: appNamespace
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames: ["sub1.hostname.com", "sub2.hostname.com", "sub3.hostname.com", "sub3-2.sub3.hostname.com", "sub3-5.sub3-4.sub3-3.sub3-2.sub3.hostname.com", "*.sub4.hostname.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      sessionPersistence:
        type: Cookie
        sessionName: "_radix_session"
        idleTimeout: 5m
      backendRefs:
        - name: web
          port: 8001
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains
